// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders components/tour/demo/actions-render.tsx correctly 1`] = `
Array [
  <button
    class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
    type="button"
  >
    <span>
      Begin Tour
    </span>
  </button>,
  <div
    class="g-divider css-var-test-id g-divider-horizontal g-divider-rail"
    role="separator"
  />,
  <div
    class="g-space g-space-horizontal g-space-align-center g-space-gap-row-small g-space-gap-col-small css-var-test-id"
  >
    <div
      class="g-space-item"
    >
      <button
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        type="button"
      >
        <span>
          Upload
        </span>
      </button>
    </div>
    <div
      class="g-space-item"
    >
      <button
        class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
        type="button"
      >
        <span>
          Save
        </span>
      </button>
    </div>
    <div
      class="g-space-item"
    >
      <button
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined g-btn-icon-only"
        type="button"
      >
        <span
          class="g-btn-icon"
        >
          <span
            aria-label="ellipsis"
            class="gicon gicon-ellipsis"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="ellipsis"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
  </div>,
]
`;

exports[`renders components/tour/demo/basic.tsx correctly 1`] = `
Array [
  <button
    class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
    type="button"
  >
    <span>
      Begin Tour
    </span>
  </button>,
  <div
    class="g-divider css-var-test-id g-divider-horizontal g-divider-rail"
    role="separator"
  />,
  <div
    class="g-space g-space-horizontal g-space-align-center g-space-gap-row-small g-space-gap-col-small css-var-test-id"
  >
    <div
      class="g-space-item"
    >
      <button
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        type="button"
      >
        <span>
          Upload
        </span>
      </button>
    </div>
    <div
      class="g-space-item"
    >
      <button
        class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
        type="button"
      >
        <span>
          Save
        </span>
      </button>
    </div>
    <div
      class="g-space-item"
    >
      <button
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined g-btn-icon-only"
        type="button"
      >
        <span
          class="g-btn-icon"
        >
          <span
            aria-label="ellipsis"
            class="gicon gicon-ellipsis"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="ellipsis"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
  </div>,
]
`;

exports[`renders components/tour/demo/gap.tsx correctly 1`] = `
<div>
  <button
    class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
    type="button"
  >
    <span>
      Begin Tour
    </span>
  </button>
  <div
    class="g-space g-space-vertical g-space-gap-row-small g-space-gap-col-small css-var-test-id"
    style="display:flex;margin-top:12px"
  >
    <div
      class="g-space-item"
    >
      <div
        class="g-row css-var-test-id"
      >
        <div
          class="g-col g-col-6 css-var-test-id"
        >
          <span
            class="g-typography css-var-test-id"
          >
            Radius:
          </span>
        </div>
        <div
          class="g-col g-col-12 css-var-test-id"
        >
          <div
            class="g-slider css-var-test-id g-slider-horizontal"
          >
            <div
              class="g-slider-rail"
            />
            <div
              class="g-slider-track"
              style="left:0%;width:8%"
            />
            <div
              class="g-slider-step"
            />
            <div
              aria-disabled="false"
              aria-orientation="horizontal"
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="8"
              class="g-slider-handle"
              role="slider"
              style="left:8%;transform:translateX(-50%)"
              tabindex="0"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="g-space-item"
    >
      <div
        class="g-row css-var-test-id"
      >
        <div
          class="g-col g-col-6 css-var-test-id"
        >
          <span
            class="g-typography css-var-test-id"
          >
             offset:
          </span>
        </div>
        <div
          class="g-col g-col-12 css-var-test-id"
        >
          <div
            class="g-slider css-var-test-id g-slider-horizontal"
          >
            <div
              class="g-slider-rail"
            />
            <div
              class="g-slider-track"
              style="left:0%;width:4%"
            />
            <div
              class="g-slider-step"
            />
            <div
              aria-disabled="false"
              aria-orientation="horizontal"
              aria-valuemax="50"
              aria-valuemin="0"
              aria-valuenow="2"
              class="g-slider-handle"
              role="slider"
              style="left:4%;transform:translateX(-50%)"
              tabindex="0"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="g-space-item"
    >
      <div
        class="g-row css-var-test-id"
      >
        <div
          class="g-col g-col-6 css-var-test-id"
        >
          <span
            class="g-typography css-var-test-id"
          >
            Horizontal offset:
          </span>
        </div>
        <div
          class="g-col g-col-12 css-var-test-id"
        >
          <div
            class="g-slider css-var-test-id g-slider-horizontal"
          >
            <div
              class="g-slider-rail"
            />
            <div
              class="g-slider-track"
              style="left:0%;width:4%"
            />
            <div
              class="g-slider-step"
            />
            <div
              aria-disabled="false"
              aria-orientation="horizontal"
              aria-valuemax="50"
              aria-valuemin="0"
              aria-valuenow="2"
              class="g-slider-handle"
              role="slider"
              style="left:4%;transform:translateX(-50%)"
              tabindex="0"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="g-space-item"
    >
      <div
        class="g-row css-var-test-id"
      >
        <div
          class="g-col g-col-6 css-var-test-id"
        >
          <span
            class="g-typography css-var-test-id"
          >
            Vertical offset:
          </span>
        </div>
        <div
          class="g-col g-col-12 css-var-test-id"
        >
          <div
            class="g-slider css-var-test-id g-slider-horizontal"
          >
            <div
              class="g-slider-rail"
            />
            <div
              class="g-slider-track"
              style="left:0%;width:4%"
            />
            <div
              class="g-slider-step"
            />
            <div
              aria-disabled="false"
              aria-orientation="horizontal"
              aria-valuemax="50"
              aria-valuemin="0"
              aria-valuenow="2"
              class="g-slider-handle"
              role="slider"
              style="left:4%;transform:translateX(-50%)"
              tabindex="0"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/tour/demo/indicator.tsx correctly 1`] = `
Array [
  <button
    class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
    type="button"
  >
    <span>
      Begin Tour
    </span>
  </button>,
  <div
    class="g-divider css-var-test-id g-divider-horizontal g-divider-rail"
    role="separator"
  />,
  <div
    class="g-space g-space-horizontal g-space-align-center g-space-gap-row-small g-space-gap-col-small css-var-test-id"
  >
    <div
      class="g-space-item"
    >
      <button
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        type="button"
      >
        <span>
          Upload
        </span>
      </button>
    </div>
    <div
      class="g-space-item"
    >
      <button
        class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
        type="button"
      >
        <span>
          Save
        </span>
      </button>
    </div>
    <div
      class="g-space-item"
    >
      <button
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined g-btn-icon-only"
        type="button"
      >
        <span
          class="g-btn-icon"
        >
          <span
            aria-label="ellipsis"
            class="gicon gicon-ellipsis"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="ellipsis"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
  </div>,
]
`;

exports[`renders components/tour/demo/mask.tsx correctly 1`] = `
Array [
  <button
    class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
    type="button"
  >
    <span>
      Begin Tour
    </span>
  </button>,
  <div
    class="g-divider css-var-test-id g-divider-horizontal g-divider-rail"
    role="separator"
  />,
  <div
    class="g-space g-space-horizontal g-space-align-center g-space-gap-row-small g-space-gap-col-small css-var-test-id"
  >
    <div
      class="g-space-item"
    >
      <button
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        type="button"
      >
        <span>
          Upload
        </span>
      </button>
    </div>
    <div
      class="g-space-item"
    >
      <button
        class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
        type="button"
      >
        <span>
          Save
        </span>
      </button>
    </div>
    <div
      class="g-space-item"
    >
      <button
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined g-btn-icon-only"
        type="button"
      >
        <span
          class="g-btn-icon"
        >
          <span
            aria-label="ellipsis"
            class="gicon gicon-ellipsis"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="ellipsis"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
  </div>,
]
`;

exports[`renders components/tour/demo/non-modal.tsx correctly 1`] = `
Array [
  <button
    class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
    type="button"
  >
    <span>
      Begin non-modal Tour
    </span>
  </button>,
  <div
    class="g-divider css-var-test-id g-divider-horizontal g-divider-rail"
    role="separator"
  />,
  <div
    class="g-space g-space-horizontal g-space-align-center g-space-gap-row-small g-space-gap-col-small css-var-test-id"
  >
    <div
      class="g-space-item"
    >
      <button
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        type="button"
      >
        <span>
          Upload
        </span>
      </button>
    </div>
    <div
      class="g-space-item"
    >
      <button
        class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
        type="button"
      >
        <span>
          Save
        </span>
      </button>
    </div>
    <div
      class="g-space-item"
    >
      <button
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined g-btn-icon-only"
        type="button"
      >
        <span
          class="g-btn-icon"
        >
          <span
            aria-label="ellipsis"
            class="gicon gicon-ellipsis"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="ellipsis"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
  </div>,
]
`;

exports[`renders components/tour/demo/placement.tsx correctly 1`] = `
<button
  class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
  type="button"
>
  <span>
    Begin Tour
  </span>
</button>
`;

exports[`renders components/tour/demo/render-panel.tsx correctly 1`] = `
<div
  style="display:flex;flex-direction:column;row-gap:16px;background:rgba(50,0,0,0.65);padding:8px"
>
  <div
    class="g-tour g-tour-pure g-tour-placement-top g-tour-pure css-var-test-id"
  >
    <div
      class="g-tour-arrow"
    />
    <div
      class="g-tour-container"
      role="tooltip"
    >
      <div
        class="g-tour-panel"
      >
        <div
          class="g-tour-section"
        >
          <button
            aria-label="Close"
            class="g-tour-close"
            type="button"
          >
            <span
              aria-label="Close"
              class="gicon gicon-close g-tour-close-icon"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="close"
                fill="currentColor"
                fill-rule="evenodd"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                />
              </svg>
            </span>
          </button>
          <div
            class="g-tour-header"
          >
            <div
              class="g-tour-title"
            >
              Hello World!
            </div>
          </div>
          <div
            class="g-tour-description"
          >
            Hello World?!
          </div>
          <div
            class="g-tour-footer"
          >
            <div
              class="g-tour-indicators"
            >
              <span
                class="g-tour-indicator-active g-tour-indicator"
              />
              <span
                class="g-tour-indicator"
              />
              <span
                class="g-tour-indicator"
              />
              <span
                class="g-tour-indicator"
              />
              <span
                class="g-tour-indicator"
              />
              <span
                class="g-tour-indicator"
              />
            </div>
            <div
              class="g-tour-actions"
            >
              <button
                class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid g-btn-sm g-tour-next-btn"
                type="button"
              >
                <span>
                  Next
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="g-tour g-tour-pure g-tour-placement-top g-tour-pure css-var-test-id"
  >
    <div
      class="g-tour-arrow"
    />
    <div
      class="g-tour-container"
      role="tooltip"
    >
      <div
        class="g-tour-panel"
      >
        <div
          class="g-tour-section"
        >
          <button
            aria-label="Close"
            class="g-tour-close"
            type="button"
          >
            <span
              aria-label="Close"
              class="gicon gicon-close g-tour-close-icon"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="close"
                fill="currentColor"
                fill-rule="evenodd"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                />
              </svg>
            </span>
          </button>
          <div
            class="g-tour-cover"
          >
            <img
              alt="tour.png"
              draggable="false"
              src="https://user-images.githubusercontent.com/5378891/197385811-55df8480-7ff4-44bd-9d43-a7dade598d70.png"
            />
          </div>
          <div
            class="g-tour-header"
          >
            <div
              class="g-tour-title"
            >
              Hello World!
            </div>
          </div>
          <div
            class="g-tour-description"
          >
            Hello World?!
          </div>
          <div
            class="g-tour-footer"
          >
            <div
              class="g-tour-indicators"
            >
              <span
                class="g-tour-indicator"
              />
              <span
                class="g-tour-indicator"
              />
              <span
                class="g-tour-indicator"
              />
              <span
                class="g-tour-indicator"
              />
              <span
                class="g-tour-indicator"
              />
              <span
                class="g-tour-indicator-active g-tour-indicator"
              />
              <span
                class="g-tour-indicator"
              />
            </div>
            <div
              class="g-tour-actions"
            >
              <button
                class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined g-btn-sm g-tour-prev-btn"
                type="button"
              >
                <span>
                  Previous
                </span>
              </button>
              <button
                class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid g-btn-sm g-tour-next-btn"
                type="button"
              >
                <span>
                  Next
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="g-tour g-tour-pure g-tour-placement-top g-tour-pure g-tour-primary css-var-test-id"
  >
    <div
      class="g-tour-arrow"
    />
    <div
      class="g-tour-container"
      role="tooltip"
    >
      <div
        class="g-tour-panel"
      >
        <div
          class="g-tour-section"
        >
          <button
            aria-label="Close"
            class="g-tour-close"
            type="button"
          >
            <span
              aria-label="Close"
              class="gicon gicon-close g-tour-close-icon"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="close"
                fill="currentColor"
                fill-rule="evenodd"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                />
              </svg>
            </span>
          </button>
          <div
            class="g-tour-header"
          >
            <div
              class="g-tour-title"
            >
              Hello World!
            </div>
          </div>
          <div
            class="g-tour-description"
          >
            Hello World?!
          </div>
          <div
            class="g-tour-footer"
          >
            <div
              class="g-tour-indicators"
            >
              <span
                class="g-tour-indicator"
              />
              <span
                class="g-tour-indicator"
              />
              <span
                class="g-tour-indicator"
              />
              <span
                class="g-tour-indicator"
              />
              <span
                class="g-tour-indicator-active g-tour-indicator"
              />
            </div>
            <div
              class="g-tour-actions"
            >
              <button
                class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined g-btn-sm g-btn-background-ghost g-tour-prev-btn"
                type="button"
              >
                <span>
                  Previous
                </span>
              </button>
              <button
                class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined g-btn-sm g-tour-next-btn"
                type="button"
              >
                <span>
                  Finish
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/tour/demo/style-class.tsx correctly 1`] = `
<div
  class="g-flex css-var-test-id g-flex-align-stretch g-flex-gap-medium g-flex-vertical"
>
  <div
    class="g-flex css-var-test-id g-flex-gap-medium"
  >
    <button
      class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
      type="button"
    >
      <span>
        Begin Tour Object
      </span>
    </button>
    <button
      class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
      type="button"
    >
      <span>
        Begin Tour Function
      </span>
    </button>
  </div>
  <div
    class="g-divider css-var-test-id g-divider-horizontal g-divider-rail"
    role="separator"
  />
  <div
    class="g-space g-space-horizontal g-space-align-center g-space-gap-row-small g-space-gap-col-small css-var-test-id"
  >
    <div
      class="g-space-item"
    >
      <button
        class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
        type="button"
      >
        <span>
          Upload
        </span>
      </button>
    </div>
    <div
      class="g-space-item"
    >
      <button
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        type="button"
      >
        <span>
          Save
        </span>
      </button>
    </div>
    <div
      class="g-space-item"
    >
      <button
        class="g-btn css-var-test-id g-btn-dashed g-btn-color-default g-btn-varig-dashed"
        type="button"
      >
        <span>
          Other Actions
        </span>
      </button>
    </div>
  </div>
</div>
`;
